infrastructure/k3s/components/fusionauth/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: fusionauth-svc
  labels:
    app.kubernetes.io/name: fusionauth
    app.kubernetes.io/component: identity
    app.kubernetes.io/part-of: caicedo-seguros
    caicedo.seguros/tier: application
  annotations:
    prometheus.io/scrape: "true"
    prometheus.io/port: "9011"
spec:
  type: ClusterIP
  sessionAffinity: ClientIP
  sessionAffinityConfig:
    clientIP:
      timeoutSeconds: 10800
  selector:
    app.kubernetes.io/name: fusionauth
  ports:
    - name: http
      port: 9011
      targetPort: http
      protocol: TCP
